# td_revent

./: .gitignore  Cargo.toml  README.md
examples/: connect.rs  test.rs
src/: event_buffer.rs  event_entry.rs  event_flags.rs  event_loop.rs  lib.rs  timer.rs
src/sys/: from_raw_arc.rs  mod.rs  socket.rs
src/sys/unix/: epoll.rs  kqueue.rs  mod.rs  selector.rs
src/sys/win/: from_raw_arc.rs  handle.rs  iocp.rs  mod.rs  net.rs  overlapped.rs  pipe.rs  selector.rs  selector_iocp.rs  winsock.rs
test/: test.rs  test_base_echo.rs  test_echo_server.rs  test_timer.rs
