[package]
name = "td_revent"
version = "0.1.0"
authors = [ "tickbh <tickdream125@hotmail.com>" ]

description = "Event library for Rust, Async IO similar to libevent"
repository = "https://github.com/tickbh/td_revent"
readme = "README.md"
keywords = ["url", "parser"]
license = "MIT/Apache-2.0"

[dependencies]
libc   = "*"
time   = "0.1.33"
bitflags = "0.3"
winapi = "0.2"
ws2_32-sys = "0.2"
net2   = { version = "0.2.19", default-features = false }


[[test]]
name = "test"
path = "test/test.rs"