[package]
name = "td_revent"
version = "0.1.6"
authors = [ "tickbh <tickdream125@hotmail.com>" ]

description = "Event library for Rust, Async IO similar to libevent"
repository = "https://github.com/tickbh/td_revent"
readme = "README.md"
license = "MIT/Apache-2.0"
keywords = ["event", "AsyncIO", "libevent"]

[dependencies]
libc   = "^0.2.1"
time   = "0.1.34"
bitflags = "0.3"
nix = "0.5.0"
winapi = "^0.2"
ws2_32-sys = "^0.2"
net2   = { version = "0.2.23", default-features = false }


[[test]]
name = "test"
path = "test/test.rs"