[package]
name = "td_revent"
version = "0.2.2"
authors = [ "tickbh <tickdream125@hotmail.com>" ]

description = "Event library for Rust, Async IO similar to libevent"
repository = "https://github.com/tickbh/td_revent"
readme = "README.md"
license = "MIT/Apache-2.0"
keywords = ["event", "AsyncIO", "libevent"]

[dependencies]
libc        = "^0.2.1"
time        = "0.1.34"
bitflags    = "0.3"
nix         = "0.5.0"
rbtree      = "0.1"
psocket     = "0.1"
winapi      = "^0.2"
ws2_32-sys  = "^0.2"
kernel32-sys= "0.2.2"
rand        = "0.3.17"

[[test]]
name = "test"
path = "test/test.rs"